Added "saving" and images

--- a/views/home.html
+++ b/views/home.html
@@ -86,8 +86,7 @@
 					<div class="container">
 						<div class="carousel-caption text-start">
 							<h1>Help Others.</h1>
-							<p>Ever have coders block? Ever desparetly need help for codeing your project? Never fear, Help! is here! Help is
-								an online tool to find help, and to help, without extra clicks or hassle.</p>
+							<p>Ever have coders block? Ever desparetly need help for codeing your project? Never fear, Help! is here! Help is an online tool to find help, and to help, without extra clicks or hassle.</p>
 							<p><a class="btn btn-lg btn-primary" href="/signup" role="button">Sign up today</a></p>
 						</div>
 					</div>
@@ -99,8 +98,7 @@
 					<div class="container">
 						<div class="carousel-caption">
 							<h1>Cutting-Edge Tech</h1>
-							<p>After you have posted your project, other people can comment on it, giving you their advice and suggestions, without
-								becomming full-on developers.</p>
+							<p>After you have posted your project, other people can comment on it, giving you their advice and suggestions, without becomming full-on contributors.</p>
 							<p><a class="btn btn-lg btn-primary" href="/plea/-MUjQcKtB1AAIVy_XRfL" role="button">Learn more</a></p>
 						</div>
 					</div>
@@ -135,11 +133,11 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Help Others <span class = "text-muted"> Without extra clicks and hassle</span></h2>
-        <p class="lead">Stackoverflow, repl talk, github, discord, and assorted coding blogs are all well and good. They answer your questions. They help you out. But they do not provide developer who will actually help you. They just answer your questions. Help is designed to let you find people who are interested in assisting you in your project. Too many times I've had to quit, becuase the sheer quantity of code is just too much for one person. Not anymore. <a href = "https://help.sojs.repl.co/plea/-MUjQcKtB1AAIVy_XRfL" class = "btn btn-primary">What is Help?</a></p>
+        <h2 class="featurette-heading">Don't Do It alone <span class = "text-muted">Get Some Help.</span></h2>
+        <p class="lead">Don't work on your huge, time-consuming projects by yourself. Don't frusterate yourself when something is not working. Go get some Help. But from where? Stackoverflow, repl talk, github, discord, and assorted coding blogs are all well and good. They answer your questions. They help you out. But they do not provide developer who will actually help you. They just answer your questions. Help is designed to let you find people who are interested in assisting you in your project. Too many times I've had to quit, becuase the sheer quantity of code is just too much for one person. Not anymore. <a href = "https://help.sojs.repl.co/plea/-MUjQcKtB1AAIVy_XRfL" class = "btn btn-primary">What is Help?</a></p>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Help others" preserveAspectRatio="xMidYMid slice" focusable="false" src="./imgs/helpclipart.png" title="Help Others"/>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="90%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="Help Others" src = "./imgs/dont_do_it_alone.jpg" style = "object-fit:cover"/>
 
       </div>
     </div>
@@ -149,10 +147,10 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Find things easily. <span class="text-muted"> Just Click "Search"</span></h2>
-        <p class="lead">A long time ago, google did not exist. Yes. You heard me. Niether did bing, Yahoo search, or anything closely resemling a search engine. You had to directy type in a URL directly into the URL bar. Now, people can search for anything, from <a href = "/search?q=cat+vidoes">"cat videos"</a> to <a href = "/search?q=nerds+association">"nerds association"</a>. All you need to do is either <a href= "/search">click here</a> or "search pleas"</p>
+        <p class="lead">Its a large galaxy. One can not traverse it by themself. The internet is just as large. If someone viewed every site on the web for 1 second, he would be done in about 40 years. Do you want to search for a plea that you could be interested in for 40 years? I thought not. Enter <a href = "/search"><i>Help Search</i></a>, a highly versatile search engine that parses through hundreds of pleas to find the one that <strong>you</strong> want. No need to traverse the galaxy by yourself.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="search easily" src = "./imgs/search.png"/>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="90%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="search easily" src = "./imgs/search_everywhere.jpg" style = "object-fit:cover"/>
 
       </div>
     </div>
