--- a/views/new.html
+++ b/views/new.html
@@ -138,6 +138,12 @@
           <hr class="my-4">
 
           <button class="w-100 btn btn-primary btn-lg" id = "go">Create</button>
+          <script>
+            document.getElementById('go').addEventListener('click',(e)=>{
+              e.target.disabled=true;
+              e.target.innerHTML = 'Saving...'
+            })
+          </script>
         </form>
       </div>
     </div>
