--- a/views/home.html
+++ b/views/home.html
@@ -79,42 +79,16 @@
 					 focusable="false"  style = "object-fit: cover">
 				</div>
 				<div class="carousel-item">
-					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/help_pic.jpg"
+					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/code_too_much.png"
 					 focusable="false" style = "object-fit: cover">
-						
-
-					<div class="container">
-						<div class="carousel-caption text-start">
-							<h1>Help Others.</h1>
-							<p>Ever have coders block? Ever desparetly need help for codeing your project? Never fear, Help! is here! Help is an online tool to find help, and to help, without extra clicks or hassle.</p>
-							<p><a class="btn btn-lg btn-primary" href="/signup" role="button">Sign up today</a></p>
-						</div>
-					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/help_heading_comment.jpg"
+					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/comment_disqus.png"
 					 focusable="false"  style = "object-fit: cover">
-
-					<div class="container">
-						<div class="carousel-caption">
-							<h1>Cutting-Edge Tech</h1>
-							<p>After you have posted your project, other people can comment on it, giving you their advice and suggestions, without becomming full-on contributors.</p>
-							<p><a class="btn btn-lg btn-primary" href="/plea/-MUjQcKtB1AAIVy_XRfL" role="button">Learn more</a></p>
-						</div>
-					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/bootstrap.jpg"
+					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/stunning_responsive.png"
 					 focusable="false"  style = "object-fit: cover">
-
-					<div class="container">
-						<div class="carousel-caption text-end">
-							<h1>Stunning & Responsive UI</h1>
-							<p>With new stunning looks with help from <a style="color: aliceblue;" href="https://getbootstrap.com/">BS4</a>, you
-								can find what you want quickly and easily. </p>
-							<p><a class="btn btn-lg btn-primary" href="/search?q=python+pygame+repl" role="button">Search For a plea</a></p>
-						</div>
-					</div>
 				</div>
         
 			</div>
