--- a/views/login.html
+++ b/views/login.html
@@ -2,33 +2,8 @@
 <html lang="en">
 
 <head>
-	<!-- The core Firebase JS SDK is always required and must be listed first -->
-	<!-- The core Firebase JS SDK is always required and must be listed first -->
-	<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js">
-	</script>
+	{% include "./firebaseSDKs.html" %}
 
-	<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-	<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js">
-	</script>
-
-	<script>
-		// Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyCqqICGwZx5cheh2FRN2_emWDFmx1RzRE8",
-    authDomain: "help-38d77.firebaseapp.com",
-    projectId: "help-38d77",
-    storageBucket: "help-38d77.appspot.com",
-    messagingSenderId: "89380496627",
-    appId: "1:89380496627:web:770b5af07afa24535fc386",
-    measurementId: "G-50JHBCK55T"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-
-	</script>
 	<meta name="theme-color" content="#9C9898">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
