--- a/views/search.html
+++ b/views/search.html
@@ -2,32 +2,8 @@
 <html lang="en">
 
 <head>
-	<!-- The core Firebase JS SDK is always required and must be listed first -->
-	<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js">
-	</script>
+	{% include "./firebaseSDKs.html" %}
 
-	<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-	<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js">
-	</script>
-
-	<script>
-		// Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyCqqICGwZx5cheh2FRN2_emWDFmx1RzRE8",
-    authDomain: "help-38d77.firebaseapp.com",
-    projectId: "help-38d77",
-    storageBucket: "help-38d77.appspot.com",
-    messagingSenderId: "89380496627",
-    appId: "1:89380496627:web:770b5af07afa24535fc386",
-    measurementId: "G-50JHBCK55T"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-
-	</script>
   <meta name = "author" content = "SoJS">
   <meta name = "description" content = "Search for a plea. Irelevant results marked.">
 	<link rel="stylesheet" href="./css/tag-display.css">
