SEO optimization and carousel

--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Help is an online platform to find help for all of your coding projects, without needing to ask the akward question - 'I need help, can you help me?'">
+	<meta name="description" content="Help is an online tool to find help and assitance with your coding projects.">
 	<meta name="author" content="SoJS">
 	<meta name="generator" content="Hugo 0.79.0">
 	<title>Help!</title>
@@ -46,24 +46,61 @@
 				<li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
 				<li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
 				<li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
-        <li data-bs-target="#myCarousel" data-bs-slide-to="3"></li>
 			</ol>
 			<div class="carousel-inner">
-        <div class="carousel-item active">
-					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/cover.png"
-					 focusable="false"  style = "object-fit: cover">
-				</div>
-				<div class="carousel-item">
+				<div class="carousel-item active">
 					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/code_too_much.png"
 					 focusable="false" style = "object-fit: cover">
+						
+
+					<div class="container">
+            
+						<div class="carousel-caption text-start">
+              <div class = "backbox">
+                <div class = "captioncontent">
+                  <h1>Sometimes the code is too much</h1>
+                  <p>With Help, you can quickly find developers to help code and make your project. Don't do it alone.</p>
+                  <p><a class="btn btn-lg btn-primary" href="/signup" role="button">Sign up today</a></p>
+                </div>
+              </div>
+						</div>
+					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/comment_disqus.png"
-					 focusable="false"  style = "object-fit: cover">
+					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/comment_with_disqus.png"
+					 focusable="false" style = "object-fit: cover">
+						
+
+					<div class="container">
+            
+						<div class="carousel-caption">
+              <div class = "backbox">
+                <div class = "captioncontent">
+                  <h6 class = "h1">Comment With Disqus</h6>
+                  <p>You can now comment on other peoples posts. <b>Amazing.</b></p>
+                  <p><a class="btn btn-lg btn-primary" href="/pleas" role="button">View Pleas for Help</a></p>
+                </div>
+              </div>
+						</div>
+					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/stunning_responsive.png"
-					 focusable="false"  style = "object-fit: cover">
+					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/stunning_and_responsive.png"
+					 focusable="false" style = "object-fit: cover">
+						
+
+					<div class="container">
+            
+						<div class="carousel-caption text-end">
+              <div class = "backbox">
+                <div class = "captioncontent">
+                  <h6 class = "h1">Stunning and Responsive UI</h6>
+                  <p>With stunning new looks powered by <a href = "https://getbootstrap.com">bootstrap 5</a>, you can find what you want quickly and easily</p>
+                  <p><i>Be Amazed</i></p>
+                </div>
+              </div>
+						</div>
+					</div>
 				</div>
         
 			</div>
@@ -95,7 +132,7 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Find things easily. <span class="text-muted"> Just Click "Search"</span></h2>
+        <h6 class="featurette-heading h2">Find things easily. <span class="text-muted"> Just Click "Search"</span></h6>
         <p class="lead">Its a large galaxy. One can not traverse it by themself. The internet is just as large. If someone viewed every site on the web for 1 second, he would be done in about 40 years. Do you want to search for a plea that you could be interested in for 40 years? I thought not. Enter <a href = "/search"><i>Help Search</i></a>, a highly versatile search engine that parses through hundreds of pleas to find the one that <strong>you</strong> want. No need to traverse the galaxy by yourself.</p>
       </div>
       <div class="col-md-5 order-md-1">
@@ -108,7 +145,7 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">WISYWIG Description <sup class = "bg-warning text-dark">New!</sup><span class="text-muted"> Stunning.</span></h2>
+        <h6 class="featurette-heading h2">WISYWIG Description <sup class = "bg-warning text-dark">New!</sup><span class="text-muted"> Stunning.</span></h6>
         <p class="lead">Imaging this: clicking the "new" button, and being greeted with an amazing WISYWIG editor powered by <a href= "https://kothing.github.io/editor/index.html">kothing</a>. None of the ugly markdown formatting, but a clean, beautiful text editor, displaying excatly what you want, and what you are going to get. No second guessing yourself "Aren't I supposed to put a space there?"</p>
       </div>
       <div class="col-md-5">
@@ -120,7 +157,7 @@
     <hr class="featurette-divider">
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class = "featurette-heading">Post Comments <sup   class = "bg-warning text-dark">New!</sup><span class="text-muted"> How Fancy.</span></h2>
+        <h6 class = "featurette-heading h2">Post Comments <sup   class = "bg-warning text-dark">New!</sup><span class="text-muted"> How Fancy.</span></h6>
         <p class="lead">There used to be a time, way back in the internets beginings, that having any sort of conversation on a website was impossible. That is a thing of the past. Now, with comments powered by <a href= "https://disqus.com/">Disqus</a>, that dream has become reality. Use Disqus to check with people to make sure you <i>really</i> want them helping you, or provide advice or suggestions.</p>
       </div>
       <div class="col-md-5 order-md-1">
