Updated Styles and search.

--- a/views/css/dark-theme.css
+++ b/views/css/dark-theme.css
@@ -2,18 +2,15 @@ a{
   color: lightblue;
   text-decoration: none !important;
 }
+a:hover{
+  color: lightblue;
+  text-decoration: underline;
+}
 body{
   background-color: #03030e !important;
 }
 .text-muted{
   color: #cdcdcd;
-}
-.btn-primary{
-  background-color: dodgerblue !important;
-  color: white !important;
-}
-.btn-primary:hover{
-  background-color: rgb(5, 102, 199) !important;
 }
 iframe{
   border: 1px solid white;
@@ -29,6 +26,12 @@ input,.cards,.container,main,body,article,footer,iframe{
   border-radius: 6px;
   margin: 6px;
   border: none;
+}
+.not-looking-for{
+  text-emphasis: emphasis;
+  color: #fff;
+  font-weight: bold;
+  font-size: 3vh;
 }
 .headerdiv{
   background-color: #03030e !important;
