--- a/views/edit.html
+++ b/views/edit.html
@@ -9,17 +9,17 @@
 	<meta name="description" content="">
 	<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
 	<meta name="generator" content="Hugo 0.79.0">
-	<link rel="stylesheet" href="../css/home.css" />
-	<link rel="stylesheet" href="../css/cards.css">
+	<link rel="stylesheet" href="/css/home.css" />
+	<link rel="stylesheet" href="/css/cards.css">
   
   <!-- Tags -->
-  <script src="../js/jquery.1.5.2.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../js/jquery.1.8.12.js" type="text/javascript" charset="utf-8"></script>
-  <link rel="stylesheet" href="../css/tagit.ui-zendesk.css">
-  <link rel="stylesheet" href="../css/light-theme.css"/>
+  <script src="/js/jquery.1.5.2.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/js/jquery.1.8.12.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" href="/css/tagit.ui-zendesk.css">
+  <link rel="stylesheet" href="/css/light-theme.css"/>
 
-  <script src="../js/tag-it.js" type="text/javascript" charset="utf-8"></script>
-  <link href="../css/jquery.tagit.css" rel="stylesheet" type="text/css">
+  <script src="/js/tag-it.js" type="text/javascript" charset="utf-8"></script>
+  <link href="/css/jquery.tagit.css" rel="stylesheet" type="text/css">
   <link rel = "stylesheet" href="https://kothing.github.io/editor/dist/css/kothing-editor.min.css"/>
 <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/htmlmixed/htmlmixed.js"></script>
@@ -67,10 +67,10 @@
 {% include "./header.html" %}
 
 
-<div class="container">
+<div class="container" style = "margin-top: 3em">
   <main>
     <div class="py-5 text-center">
-      <h2>New Plea</h2>
+      <h2>Edit Plea</h2>
       <p class="lead">Update Plea <b>{{ plea.title }}</b></p>
     </div>
 
