--- a/views/home.html
+++ b/views/home.html
@@ -67,7 +67,7 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/comment_with_disqus.png"
+					<img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" src = "./imgs/comment_large.png"
 					 focusable="false" style = "object-fit: cover">
 						
 
@@ -76,9 +76,9 @@
 						<div class="carousel-caption">
               <div class = "backbox">
                 <div class = "captioncontent">
-                  <h6 class = "h1">Comment With Disqus</h6>
+                  <h6 class = "h1">Comment with Widgetpack</h6>
                   <p>You can now comment on other peoples posts. <b>Amazing.</b></p>
-                  <p><a class="btn btn-lg btn-primary" href="/pleas" role="button">View Pleas for Help</a></p>
+                  <p><a class="btn btn-lg btn-primary" href="/pleas" role="button">Veiw all pleas</a></p>
                 </div>
               </div>
 						</div>
@@ -119,8 +119,8 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Don't Do It alone <span class = "text-muted">Get Some Help.</span></h2>
-        <p class="lead">Don't work on your huge, time-consuming projects by yourself. Don't frusterate yourself when something is not working. Go get some Help. But from where? Stackoverflow, repl talk, github, discord, and assorted coding blogs are all well and good. They answer your questions. They help you out. But they do not provide developer who will actually help you. They just answer your questions. Help is designed to let you find people who are interested in assisting you in your project. Too many times I've had to quit, becuase the sheer quantity of code is just too much for one person. Not anymore. <a href = "https://help.sojs.repl.co/plea/-MUjQcKtB1AAIVy_XRfL" class = "btn btn-primary">What is Help?</a></p>
+        <h2 class="featurette-heading">Don't Do It alone. <span class = "text-muted">Get Some Help.</span></h2>
+        <p class="lead">Don't work on your huge, time-consuming projects by yourself. Don't frustrate yourself when something is not working. Go get some Help. But from where? Stackoverflow, repl talk, github, discord, and assorted coding blogs are all well and good. They answer your questions. They help you out. But they do not provide developer who will actually help you. They just answer your questions. Help is designed to let you find people who are interested in assisting you in your project. Too many times I've had to quit, becuase the sheer quantity of code is just too much for one person. Not anymore. <a href = "https://help.sojs.repl.co/plea/-MUjQcKtB1AAIVy_XRfL" class = "btn btn-primary">What is Help?</a></p>
       </div>
       <div class="col-md-5">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="90%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="Help Others" src = "./imgs/dont_do_it_alone.jpg" style = "object-fit:cover"/>
@@ -158,10 +158,10 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h6 class = "featurette-heading h2">Post Comments <sup   class = "bg-warning text-dark">New!</sup><span class="text-muted"> How Fancy.</span></h6>
-        <p class="lead">There used to be a time, way back in the internets beginings, that having any sort of conversation on a website was impossible. That is a thing of the past. Now, with comments powered by <a href= "https://disqus.com/">Disqus</a>, that dream has become reality. Use Disqus to check with people to make sure you <i>really</i> want them helping you, or provide advice or suggestions.</p>
+        <p class="lead">There used to be a time, way back in the internets beginings, that having any sort of conversation on a website was impossible. That is a thing of the past. Now, with comments powered by <a href= "https://widgetpack.com/comment-system">widgetpack</a>, that dream has become reality. Use the comments to check with people to make sure you <i>really</i> want them helping you, or provide advice or suggestions.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="Comments Powered by Disqus" src = "./imgs/comment.png"/>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="Comments Powered by widgetpack" src = "./imgs/comment.png"/>
 
       </div>
     </div>
