--- a/views/pleas.html
+++ b/views/pleas.html
@@ -43,7 +43,9 @@
 
   
   
-  <div style = "text-align: center;  padding-bottom: 6px; width: 50%;position: relative; left: 25%; right: 25%;"><h1 class = "display-3" >Pleas</h1><span  class = "text-muted">Search for a plea</span>
+  <div style = "text-align: center;  padding-bottom: 6px; width: 50%;position: relative; left: 25%; right: 25%;"><h1 class = "display-3" >Pleas</h1>
+  <p>Looking for pleas? Browsing? Try <a href = "/search">searching</a> for a plea. Or, just scroll down to see more.</p>
+  <span  class = "text-muted">Search for a plea</span>
   <form action = "search" method = "GET" class = "form-inline">
     <div class="form-group mx-sm-3 mb-2">
     <input class="form-control" id="q" placeholder="Search"  name = "q">
@@ -56,7 +58,7 @@
   <!-- Cards -->
   {% for plea in pleas %}
     <div class="card-body">
-      <h5 class="card-title">{{ plea.title }}</h5>
+      <h6 class="card-title h5">{{ plea.title }}</h5>
       <h6 class="card-subtitle mb-2 text-muted">@{{ plea.author }}</h6>
       <p class="card-text">{{ plea.shortDes }}</p>
       <p class = "text-muted">Tags</p>
